--- a/formatter.ipynb
+++ b/formatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,14 +1062,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4d/w8t5vd_11zs7s9jlct5ksrfr0000gn/T/ipykernel_1066/1657868884.py:28: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "/var/folders/4d/w8t5vd_11zs7s9jlct5ksrfr0000gn/T/ipykernel_1066/3795389787.py:28: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
       "  df.loc[:, ['SemType']] = semtypes\n"
      ]
     },
@@ -1102,6 +1102,7 @@
        "      <th>SemType</th>\n",
        "      <th>Holiday</th>\n",
        "      <th>MenuItem</th>\n",
+       "      <th>CouponsMand</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1115,6 +1116,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1125,6 +1127,7 @@
        "      <td>217.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1137,6 +1140,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1148,6 +1152,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1158,6 +1163,7 @@
        "      <td>236.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1172,15 +1178,15 @@
        "3 2022-09-01        3         Dinner       113.0    220.0    False    False   \n",
        "4 2022-09-02        4      BreakFast       100.0    236.0    False    False   \n",
        "\n",
-       "   MenuItem  \n",
-       "0       NaN  \n",
-       "1       NaN  \n",
-       "2       NaN  \n",
-       "3       NaN  \n",
-       "4       NaN  "
+       "   MenuItem  CouponsMand  \n",
+       "0       NaN          NaN  \n",
+       "1       NaN          NaN  \n",
+       "2       NaN          NaN  \n",
+       "3       NaN          NaN  \n",
+       "4       NaN          NaN  "
       ]
      },
-     "execution_count": 194,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,13 +1231,13 @@
     "\n",
     "df.loc[:, 'Holiday'] = holidays\n",
     "\n",
-    "df = df.loc[:, ['Date', 'Weekday', 'MealType', 'Paytm+Cash', 'Coupons', 'SemType', 'Holiday', 'MenuItem']]\n",
+    "df = df.loc[:, ['Date', 'Weekday', 'MealType', 'Paytm+Cash', 'Coupons', 'SemType', 'Holiday', 'MenuItem', 'CouponsMand']]\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -3010,7 +3016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -3042,8 +3048,8 @@
        "      <th>SemType</th>\n",
        "      <th>Holiday</th>\n",
        "      <th>MenuItem</th>\n",
+       "      <th>CouponsMand</th>\n",
        "      <th>Ajwain Parantha</th>\n",
-       "      <th>Aloo Sabzi</th>\n",
        "      <th>...</th>\n",
        "      <th>Kathal</th>\n",
        "      <th>Arvi</th>\n",
@@ -3068,7 +3074,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3092,7 +3098,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3116,7 +3122,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3140,7 +3146,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3164,7 +3170,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3180,7 +3186,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 130 columns</p>\n",
+       "<p>5 rows × 131 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3191,12 +3197,12 @@
        "3 2022-09-01        3         Dinner       113.0    220.0    False    False   \n",
        "4 2022-09-02        4      BreakFast       100.0    236.0    False    False   \n",
        "\n",
-       "   MenuItem  Ajwain Parantha  Aloo Sabzi  ...  Kathal  Arvi  Mango  \\\n",
-       "0       NaN              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "1       NaN              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "2       NaN              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "3       NaN              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "4       NaN              0.0         0.0  ...     0.0   0.0    0.0   \n",
+       "   MenuItem  CouponsMand  Ajwain Parantha  ...  Kathal  Arvi  Mango  \\\n",
+       "0       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
+       "1       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
+       "2       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
+       "3       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
+       "4       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
        "\n",
        "   Paneer Lababdar  Seasonal Vegetable (Karela)  Dhuli Urad Dal  \\\n",
        "0              0.0                          0.0             0.0   \n",
@@ -3212,10 +3218,10 @@
        "3                 0.0           0.0         0.0          0.0  \n",
        "4                 0.0           0.0         0.0          0.0  \n",
        "\n",
-       "[5 rows x 130 columns]"
+       "[5 rows x 131 columns]"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3231,7 +3237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3246,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -3683,7 +3689,7 @@
        "1568 2023-09-28        3           1.0"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3704,7 +3710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -3751,7 +3757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
