--- a/formatter.ipynb
+++ b/formatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,17 +1062,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/4d/w8t5vd_11zs7s9jlct5ksrfr0000gn/T/ipykernel_1066/3795389787.py:28: FutureWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  df.loc[:, ['SemType']] = semtypes\n"
-     ]
-    },
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>MealType</th>\n",
+       "      <th>Paytm+Cash</th>\n",
+       "      <th>Coupons</th>\n",
+       "      <th>SemType</th>\n",
+       "      <th>Holiday</th>\n",
+       "      <th>CouponsMand</th>\n",
+       "      <th>Exam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-09-01</td>\n",
+       "      <td>BreakFast</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>Acad</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-09-01</td>\n",
+       "      <td>Lunch</td>\n",
+       "      <td>293.0</td>\n",
+       "      <td>217.0</td>\n",
+       "      <td>Acad</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-09-01</td>\n",
+       "      <td>EveningSnacks</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>Acad</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-09-01</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>Acad</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-09-02</td>\n",
+       "      <td>BreakFast</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>236.0</td>\n",
+       "      <td>Acad</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date       MealType  Paytm+Cash  Coupons SemType  Holiday  \\\n",
+       "0 2022-09-01      BreakFast       186.0    117.0    Acad        0   \n",
+       "1 2022-09-01          Lunch       293.0    217.0    Acad        0   \n",
+       "2 2022-09-01  EveningSnacks        37.0    139.0    Acad        0   \n",
+       "3 2022-09-01         Dinner       113.0    220.0    Acad        0   \n",
+       "4 2022-09-02      BreakFast       100.0    236.0    Acad        0   \n",
+       "\n",
+       "   CouponsMand  Exam  \n",
+       "0          0.0     0  \n",
+       "1          0.0     0  \n",
+       "2          0.0     0  \n",
+       "3          0.0     0  \n",
+       "4          0.0     0  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -1101,7 +1214,6 @@
        "      <th>Coupons</th>\n",
        "      <th>SemType</th>\n",
        "      <th>Holiday</th>\n",
-       "      <th>MenuItem</th>\n",
        "      <th>CouponsMand</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1115,8 +1227,7 @@
        "      <td>117.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1127,8 +1238,7 @@
        "      <td>217.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1139,8 +1249,7 @@
        "      <td>139.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1151,8 +1260,7 @@
        "      <td>220.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1163,8 +1271,7 @@
        "      <td>236.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1178,15 +1285,15 @@
        "3 2022-09-01        3         Dinner       113.0    220.0    False    False   \n",
        "4 2022-09-02        4      BreakFast       100.0    236.0    False    False   \n",
        "\n",
-       "   MenuItem  CouponsMand  \n",
-       "0       NaN          NaN  \n",
-       "1       NaN          NaN  \n",
-       "2       NaN          NaN  \n",
-       "3       NaN          NaN  \n",
-       "4       NaN          NaN  "
+       "   CouponsMand  \n",
+       "0          0.0  \n",
+       "1          0.0  \n",
+       "2          0.0  \n",
+       "3          0.0  \n",
+       "4          0.0  "
       ]
      },
-     "execution_count": 266,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,13 +1338,13 @@
     "\n",
     "df.loc[:, 'Holiday'] = holidays\n",
     "\n",
-    "df = df.loc[:, ['Date', 'Weekday', 'MealType', 'Paytm+Cash', 'Coupons', 'SemType', 'Holiday', 'MenuItem', 'CouponsMand']]\n",
+    "df = df.loc[:, ['Date', 'Weekday', 'MealType', 'Paytm+Cash', 'Coupons', 'SemType', 'Holiday', 'CouponsMand']]\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2963,7 +3070,7 @@
       "2023 9 5 Lunch\n",
       "2023 9 5 EveningSnacks\n",
       "2023 9 5 Dinner\n",
-      "(array([   0,    0,    0, ..., 1579, 1579, 1579]), array([ 19,  31,  42, ...,  16,  34, 116]))\n"
+      "(array([   0,    0,    0, ..., 1579, 1579, 1579], dtype=int64), array([ 19,  31,  42, ...,  16,  34, 116], dtype=int64))\n"
      ]
     }
    ],
@@ -3016,7 +3123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3047,9 +3154,9 @@
        "      <th>Coupons</th>\n",
        "      <th>SemType</th>\n",
        "      <th>Holiday</th>\n",
-       "      <th>MenuItem</th>\n",
        "      <th>CouponsMand</th>\n",
        "      <th>Ajwain Parantha</th>\n",
+       "      <th>Aloo Sabzi</th>\n",
        "      <th>...</th>\n",
        "      <th>Kathal</th>\n",
        "      <th>Arvi</th>\n",
@@ -3073,8 +3180,8 @@
        "      <td>117.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3097,8 +3204,8 @@
        "      <td>217.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3121,8 +3228,8 @@
        "      <td>139.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3145,8 +3252,8 @@
        "      <td>220.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3169,8 +3276,8 @@
        "      <td>236.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -3186,7 +3293,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 131 columns</p>\n",
+       "<p>5 rows × 130 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3197,12 +3304,12 @@
        "3 2022-09-01        3         Dinner       113.0    220.0    False    False   \n",
        "4 2022-09-02        4      BreakFast       100.0    236.0    False    False   \n",
        "\n",
-       "   MenuItem  CouponsMand  Ajwain Parantha  ...  Kathal  Arvi  Mango  \\\n",
-       "0       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
-       "1       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
-       "2       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
-       "3       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
-       "4       NaN          NaN              0.0  ...     0.0   0.0    0.0   \n",
+       "   CouponsMand  Ajwain Parantha  Aloo Sabzi  ...  Kathal  Arvi  Mango  \\\n",
+       "0          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
+       "1          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
+       "2          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
+       "3          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
+       "4          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
        "\n",
        "   Paneer Lababdar  Seasonal Vegetable (Karela)  Dhuli Urad Dal  \\\n",
        "0              0.0                          0.0             0.0   \n",
@@ -3218,10 +3325,10 @@
        "3                 0.0           0.0         0.0          0.0  \n",
        "4                 0.0           0.0         0.0          0.0  \n",
        "\n",
-       "[5 rows x 131 columns]"
+       "[5 rows x 130 columns]"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3237,11 +3344,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_df.drop('MenuItem', axis=1, inplace=True)\n",
+    "# big_df.drop('MenuItem', axis=1, inplace=True)\n",
     "\n",
     "big_df.head()\n",
     "big_df[\"Coupons\"] = big_df[\"Coupons\"].fillna(0)\n",
@@ -3781,7 +3888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
