--- a/formatter.ipynb
+++ b/formatter.ipynb
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        "4          0.0     0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,9 +1183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_14976\\640940270.py:28: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, ['SemType']] = semtypes\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1293,7 +1301,7 @@
        "4          0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3123,7 +3131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3328,7 +3336,7 @@
        "[5 rows x 130 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3344,15 +3352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# big_df.drop('MenuItem', axis=1, inplace=True)\n",
     "\n",
     "big_df.head()\n",
-    "big_df[\"Coupons\"] = big_df[\"Coupons\"].fillna(0)\n",
-    "big_df[\"Paytm+Cash\"] = big_df[\"Paytm+Cash\"].fillna(0)\n",
+    "# big_df[\"Coupons\"] = big_df[\"Coupons\"].fillna(0)\n",
+    "# big_df[\"Paytm+Cash\"] = big_df[\"Paytm+Cash\"].fillna(0)\n",
+    "big_df = big_df.dropna()\n",
     "\n",
     "big_df.to_csv('data/all_with_onehot.csv', index=False)"
    ]
