--- a/formatter.ipynb
+++ b/formatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        "4          0.0     0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,21 +1330,21 @@
     "\n",
     "# print(weekdays)\n",
     "\n",
-    "semtypes = list()\n",
-    "for i in range(len(dates)):\n",
-    "    semtypes.append(dates[i] > summer_start and dates[i] < summer_end)\n",
+    "# semtypes = list()\n",
+    "# for i in range(len(dates)):\n",
+    "#     semtypes.append(dates[i] > summer_start and dates[i] < summer_end)\n",
     "\n",
-    "df.loc[:, ['SemType']] = semtypes\n",
+    "# df.loc[:, ['SemType']] = semtypes\n",
     "\n",
     "# Weekday format: 6 for Sunday, 0 for Monday\n",
-    "df.loc[:, 'Weekday'] = weekdays\n",
+    "# df.loc[:, 'Weekday'] = weekdays\n",
     "\n",
-    "holidays_list = []\n",
-    "holidays = list()\n",
-    "for i in range(len(dates)):\n",
-    "    holidays.append(dates[i] in holidays_list)\n",
+    "# holidays_list = []\n",
+    "# holidays = list()\n",
+    "# for i in range(len(dates)):\n",
+    "#     holidays.append(dates[i] in holidays_list)\n",
     "\n",
-    "df.loc[:, 'Holiday'] = holidays\n",
+    "# df.loc[:, 'Holiday'] = holidays\n",
     "\n",
     "df = df.loc[:, ['Date', 'Weekday', 'MealType', 'Paytm+Cash', 'Coupons', 'SemType', 'Holiday', 'CouponsMand']]\n",
     "df.head()"
@@ -3131,7 +3131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3336,7 +3336,7 @@
        "[5 rows x 130 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3352,7 +3352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
