--- a/models/linear_regression.ipynb
+++ b/models/linear_regression.ipynb
@@ -2,91 +2,366 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"../data/all_with_onehot.csv\")\n",
+    "data = data[data['SemType'] != 'Vacation']\n",
+    "data = data.reset_index() # did not drop, just reset\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "months = []\n",
+    "for i in range(len(data)):\n",
+    "  # X['Date'][i] = X['Date'][i][5:7]\n",
+    "  month = float(data['Date'][i][5:7])\n",
+    "  months.append(month)\n",
+    "\n",
+    "data['Month'] = pd.Series(months)\n",
+    "\n",
+    "data = data.dropna()\n",
+    "\n",
+    "data['MealType_encoded'] = label_encoder.fit_transform(data['MealType'])\n",
+    "data['SemType_encoded'] = label_encoder.fit_transform(data['SemType'])\n",
+    "\n",
+    "X = data\n",
+    "X = X.drop(['Paytm+Cash', 'Coupons', 'Date', 'MealType', 'SemType', 'index'], axis=1)\n",
+    "# X = data[['Weekday','MealType_encoded','SemType_encoded','Holiday','CouponsMand', 'Month']]\n",
+    "y1 = data['Paytm+Cash']\n",
+    "y2 = data['Coupons']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weekday</th>\n",
+       "      <th>Holiday</th>\n",
+       "      <th>CouponsMand</th>\n",
+       "      <th>Ajwain Parantha</th>\n",
+       "      <th>Aloo Sabzi</th>\n",
+       "      <th>Pickle</th>\n",
+       "      <th>Egg Bhurji</th>\n",
+       "      <th>Banana</th>\n",
+       "      <th>Dal Makhni</th>\n",
+       "      <th>Mix Veg</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Paneer Lababdar</th>\n",
+       "      <th>Seasonal Vegetable (Karela)</th>\n",
+       "      <th>Dhuli Urad Dal</th>\n",
+       "      <th>Aloo Kasoori Methi</th>\n",
+       "      <th>Nutrela Peas</th>\n",
+       "      <th>Palak Soya</th>\n",
+       "      <th>Lauki Chana</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>MealType_encoded</th>\n",
+       "      <th>SemType_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 128 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Weekday  Holiday  CouponsMand  Ajwain Parantha  Aloo Sabzi  Pickle  \\\n",
+       "0        3        0          0.0              0.0         0.0     0.0   \n",
+       "1        3        0          0.0              0.0         0.0     0.0   \n",
+       "2        3        0          0.0              0.0         0.0     0.0   \n",
+       "3        3        0          0.0              0.0         0.0     0.0   \n",
+       "4        4        0          0.0              0.0         0.0     0.0   \n",
+       "\n",
+       "   Egg Bhurji  Banana  Dal Makhni  Mix Veg  ...  Paneer Lababdar  \\\n",
+       "0         0.0     0.0         0.0      0.0  ...              0.0   \n",
+       "1         0.0     0.0         0.0      0.0  ...              0.0   \n",
+       "2         0.0     0.0         0.0      0.0  ...              0.0   \n",
+       "3         0.0     0.0         0.0      0.0  ...              0.0   \n",
+       "4         1.0     1.0         0.0      0.0  ...              0.0   \n",
+       "\n",
+       "   Seasonal Vegetable (Karela)  Dhuli Urad Dal  Aloo Kasoori Methi  \\\n",
+       "0                          0.0             0.0                 0.0   \n",
+       "1                          0.0             0.0                 0.0   \n",
+       "2                          0.0             0.0                 0.0   \n",
+       "3                          0.0             0.0                 0.0   \n",
+       "4                          0.0             0.0                 0.0   \n",
+       "\n",
+       "   Nutrela Peas  Palak Soya  Lauki Chana  Month  MealType_encoded  \\\n",
+       "0           0.0         0.0          0.0    9.0                 0   \n",
+       "1           0.0         0.0          0.0    9.0                 3   \n",
+       "2           0.0         0.0          0.0    9.0                 2   \n",
+       "3           0.0         0.0          0.0    9.0                 1   \n",
+       "4           0.0         0.0          0.0    9.0                 0   \n",
+       "\n",
+       "   SemType_encoded  \n",
+       "0                0  \n",
+       "1                0  \n",
+       "2                0  \n",
+       "3                0  \n",
+       "4                0  \n",
+       "\n",
+       "[5 rows x 128 columns]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Date  Weekday       MealType  Paytm+Cash  Coupons  SemType  \\\n",
-      "0     2022-09-01        3      BreakFast       186.0    117.0    False   \n",
-      "1     2022-09-01        3          Lunch       293.0    217.0    False   \n",
-      "2     2022-09-01        3  EveningSnacks        37.0    139.0    False   \n",
-      "3     2022-09-01        3         Dinner       113.0    220.0    False   \n",
-      "4     2022-09-02        4      BreakFast       100.0    236.0    False   \n",
-      "...          ...      ...            ...         ...      ...      ...   \n",
-      "1575  2023-09-29        4         Dinner         0.0      NaN    False   \n",
-      "1576  2023-09-30        5      BreakFast         0.0      NaN    False   \n",
-      "1577  2023-09-30        5          Lunch         0.0      NaN    False   \n",
-      "1578  2023-09-30        5  EveningSnacks         0.0      NaN    False   \n",
-      "1579  2023-09-30        5         Dinner         0.0      NaN    False   \n",
-      "\n",
-      "      Holiday  CouponsMand  \n",
-      "0       False          0.0  \n",
-      "1       False          0.0  \n",
-      "2       False          0.0  \n",
-      "3       False          0.0  \n",
-      "4       False          0.0  \n",
-      "...       ...          ...  \n",
-      "1575    False          1.0  \n",
-      "1576    False          1.0  \n",
-      "1577    False          1.0  \n",
-      "1578    False          1.0  \n",
-      "1579    False          1.0  \n",
-      "\n",
-      "[1580 rows x 8 columns]\n"
+      "Root Mean Squared Error: 22.028775517315843\n",
+      "R-squared: 0.7190003482333409\n"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv(\"../data/all.csv\")\n",
+    "# Paytm+Cash\n",
     "\n",
-    "print(data)\n",
-    "# months = []\n",
+    "X_train, X_test, y1_train, y1_test = train_test_split(X, y1, test_size=0.2, random_state=42)\n",
     "\n",
-    "# for i in range(1580):\n",
-    "#   # X['Date'][i] = X['Date'][i][5:7]\n",
-    "#   month = float(data['Date'][i][5:7])\n",
-    "#   months.append(month)\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y1_train)\n",
     "\n",
-    "# data['Month'] = pd.Series(months)\n",
+    "y_pred = model.predict(X_test)\n",
     "\n",
-    "# data_encoded = pd.get_dummies(data, columns=['MealType'], prefix='MealType')\n",
+    "mse = mean_squared_error(y1_test, y_pred)\n",
+    "r2 = r2_score(y1_test, y_pred)\n",
     "\n",
-    "# print(data)\n",
+    "print(\"Root Mean Squared Error:\", mse**0.5)\n",
+    "print(\"R-squared:\", r2)\n",
     "\n",
-    "# X = data[['Weekday','MealType','SemType','Holiday','CouponsMand', 'Month']]\n",
-    "# y = data[['Paytm+Cash','Coupons']]\n",
+    "# almost double ho gya r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 63.35199271398055\n",
+      "R-squared: 0.505260531762043\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Coupons\n",
     "\n",
-    "# print(X)\n",
+    "X_train, X_test, y2_train, y2_test = train_test_split(X, y2, test_size=0.2, random_state=42)\n",
     "\n",
-    "# # X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y2_train)\n",
     "\n",
-    "# # model = LinearRegression()\n",
-    "# # model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
     "\n",
-    "# # y_pred = model.predict(X_test)\n",
+    "mse = mean_squared_error(y2_test, y_pred)\n",
+    "r2 = r2_score(y2_test, y_pred)\n",
     "\n",
-    "# # mse = mean_squared_error(y_test, y_pred)\n",
-    "# # r2 = r2_score(y_test, y_pred)\n",
+    "print(\"Root Mean Squared Error:\", mse**0.5)\n",
+    "print(\"R-squared:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 71.53972394376895\n",
+      "R-squared: 0.6105824741355463\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Both\n",
     "\n",
-    "# # print(\"Root Mean Squared Error:\", mse**0.5)\n",
-    "# # print(\"R-squared:\", r2)\n",
+    "y3 = y1.values + y2.values\n",
     "\n",
-    "# # X"
+    "X_train, X_test, y3_train, y3_test = train_test_split(X, y3, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y3_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y3_test, y_pred)\n",
+    "r2 = r2_score(y3_test, y_pred)\n",
+    "\n",
+    "print(\"Root Mean Squared Error:\", mse**0.5)\n",
+    "print(\"R-squared:\", r2)"
    ]
   },
   {
